Css correction
Changed the background image to cover the full screen.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,11 +20,9 @@ body {
   padding: 2%;
   position: relative;
   width: 100%;
-  height: auto;
-  min-height: 35rem;
+  height: 100vh; 
   text-align: center;
   color: #001c55;
-  padding: 100px 0;
   background-size: cover;
   background-position: center;
   background-image: url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&q=85&fm=jpg&crop=entropy&cs=srgb&dl=sean-oulashin-KMn4VEeEPR8-unsplash.jpg");
@@ -33,6 +31,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 
 .masthead h1 {
   font-size: 3.5rem;
